Se agregan media queries al css para que el proyecto sea responsive

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img {
 /* HEADER */
 
 img.logo {
-    width: 14rem;
+    width: 18rem;
 }
 
 .encabezado {
@@ -68,6 +68,7 @@ section {
 
 footer {
     display: flex;
+    flex-wrap: wrap;
     height: 30rem;
     font-family: 'Montserrat', sans-serif;
     flex-direction: column;
@@ -109,13 +110,16 @@ footer {
 
 .contenedor1 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
 .titulo {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
     padding: 5rem 0;
     font-size: 6rem;
     font-weight: bold;
@@ -126,11 +130,13 @@ footer {
 
 .parte1 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .torta {
     display: flex;
+    flex-wrap: wrap;
     width: 40rem;
 }
 
@@ -138,6 +144,7 @@ footer {
 
 .tp {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -146,6 +153,7 @@ footer {
 
 .parrafo2 {
     display: flex;
+    flex-wrap: wrap;
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
@@ -158,6 +166,7 @@ footer {
 
 .marcado {
     display: flex;
+    flex-wrap: wrap;
     text-decoration: none;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
     font-weight: 1000;
@@ -168,6 +177,7 @@ footer {
 
 .imagen2 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -175,12 +185,14 @@ footer {
 
 .parte3 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 6rem 6rem;
 }
 
 .subtitulo {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     font-size: 3.5rem;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
@@ -191,6 +203,7 @@ footer {
 
 .imagen3 {
     display: flex;
+    flex-wrap: wrap;
     width: 60rem;
     height: 50rem;
     padding: 2rem 3rem;
@@ -198,6 +211,7 @@ footer {
 
 .parrafo3 {
     display: flex;
+    flex-wrap: wrap;
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     width: 59.6rem;
@@ -213,6 +227,7 @@ footer {
 
 .contenedor3 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
@@ -224,11 +239,13 @@ footer {
 
 .ext_boton {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 .boton {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     border: none;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
@@ -245,7 +262,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 6rem 0;
+    padding: 6rem;
 }
 
 .parrafo4 {
@@ -254,8 +271,7 @@ footer {
     font-size: 3rem;
     justify-content: center;
     text-align: center;
-    padding: 3rem 0;
-    width: 70rem;
+    padding: 3rem;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
     font-weight: 1000;
     -webkit-text-fill-color: transparent;
@@ -275,6 +291,7 @@ footer {
 .contenedor4 {
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: white;
     width: 64.6rem;
     height: 49.6rem;
@@ -285,7 +302,9 @@ footer {
 
 .parrafo5 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
@@ -297,38 +316,42 @@ footer {
 
 .borde_form {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
     z-index: 1;
     border-radius: 2rem;
     width: 120rem;
-    height: 110rem;
+    height: 130rem;
 }
 
 .ext_form {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 119.6rem;
-    height: 109.6rem;
+    height: 129.6rem;
     background-color: #c9afaf;
     border-radius: 2rem;
 }
 
 form {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     width: 110rem;
-    height: 100rem;
+    height: 120rem;
 }
 
 .contacto {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -337,6 +360,7 @@ form {
 
 .tipo1 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 110rem;
@@ -350,6 +374,7 @@ form {
 
 .tipo2 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 110rem;
@@ -363,6 +388,7 @@ form {
 
 .tipo3 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 20rem;
@@ -373,4 +399,308 @@ form {
     border: none;
     background: linear-gradient(to right, #8f4f4f 0%, #9c7575 100%);
     color: #c9afaf;
+}
+
+
+/* Media queries */
+@media only screen and (max-width: 645px) {
+
+    /* General */
+
+    footer {
+        font-size: 1.5rem;
+    }
+
+    /* Index */
+
+    .titulo {
+        font-size: 2rem;
+    }
+
+    /* Tortas Personalizadas */
+
+    .parrafo2 {
+        font-size: 1.5rem;
+    }
+
+    /* Postres Clasicos */
+
+    .parte3 {
+        padding: 3rem;
+    }
+
+    .al_reves {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+
+    .imagen3 {
+        width: 30rem;
+        height: 20rem;
+        margin-bottom: 4rem;
+    }
+
+    .contenedor3 {
+        width: 30rem;
+        height: 20rem;
+    }
+
+    .parrafo3 {
+        width: 29.6rem;
+        height: 19.6rem;
+        font-size: 1rem;
+        padding: 1rem 2rem;
+    }
+
+    .subtitulo {
+        font-size: 1.5rem;
+    }
+
+    /* Envios */
+
+    .envios {
+        display: flex;
+        justify-content: center;
+        padding: 3rem 0;
+    }
+
+    .parrafo4{
+        font-size: 2rem;
+        padding: 1rem 0;
+    }
+
+    .map {
+        width: 28rem;
+        height: 18rem;
+    }
+
+    .borde_mapa {
+        width: 30.6rem;
+        height: 20.6rem;
+    }
+
+    .contenedor4 {
+        width: 30rem;
+        height: 20rem;
+    }
+
+    /* Contacto */
+
+    .parrafo5 {
+        font-size: 2rem;
+    }
+
+    .borde_form {
+        width: 30rem;
+        height: 70rem;
+    }
+
+    .ext_form {
+        width: 29.6rem;
+        height: 69.6rem;
+    }
+
+    form {
+        width: 25rem;
+        height: 65rem;
+        font-size: 1rem;
+    }
+
+    .tipo1 {
+        width: 25rem;
+        height: 3.5rem;
+    }
+
+    .tipo2 {
+        width: 25rem;
+        height: 30rem;
+    }
+
+    .tipo3 {
+        width: 5rem;
+    }
+
+}
+
+@media only screen and (min-width: 645px) and (max-width: 879px) {
+
+    /* General */
+
+    footer {
+        font-size: 1.5rem;
+    }
+
+    /* Index */
+
+    .titulo {
+        font-size: 4rem;
+    }
+
+    /* Tortas Personalizadas */
+
+    .parrafo2 {
+        font-size: 2rem;
+    }
+
+    /* Postres Clasicos */
+
+    .parte3 {
+        padding: 4rem;
+    }
+
+    .al_reves {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+
+    .imagen3 {
+        width: 40rem;
+        height: 30rem;
+        margin-bottom: 4rem;
+    }
+
+    .contenedor3 {
+        width: 40rem;
+        height: 30rem;
+    }
+
+    .parrafo3 {
+        width: 39.6rem;
+        height: 29.6rem;
+        font-size: 1.5rem;
+        padding: 1rem 2rem;
+    }
+
+    .subtitulo {
+        font-size: 2rem;
+    }
+
+    /* Contacto */
+
+    .parrafo5 {
+        font-size: 3rem;
+    }
+
+    .borde_form {
+        width: 60rem;
+        height: 100rem;
+    }
+
+    .ext_form {
+        width: 59.6rem;
+        height: 99.6rem;
+    }
+
+    form {
+        width: 55rem;
+        height: 95rem;
+        font-size: 2rem;
+    }
+
+    .tipo1 {
+        width: 55rem;
+        height: 5rem;
+    }
+
+    .tipo2 {
+        width: 55rem;
+        height: 40rem;
+    }
+
+    .tipo3 {
+        width: 12rem;
+    }
+
+}
+
+@media only screen and (min-width: 879px) and (max-width: 1320px) {
+
+    /* General */
+
+    footer {
+        font-size: 1.5rem;
+    }
+
+    /* Index */
+
+    .titulo {
+        font-size: 4rem;
+    }
+
+    /* Tortas Personalizadas */
+
+    .parrafo2 {
+        font-size: 2rem;
+    }
+
+    /* Postres Clasicos */
+
+    .parte3 {
+        padding: 4rem;
+    }
+
+    .imagen3 {
+        width: 40rem;
+        height: 30rem;
+        margin-bottom: 4rem;
+    }
+
+    .contenedor3 {
+        width: 40rem;
+        height: 30rem;
+    }
+
+    .parrafo3 {
+        width: 39.6rem;
+        height: 29.6rem;
+        font-size: 1.5rem;
+        padding: 1rem 2rem;
+    }
+
+    .subtitulo {
+        font-size: 2rem;
+    }
+
+    /* Contacto */
+
+    .parrafo5 {
+        font-size: 3rem;
+    }
+
+    .borde_form {
+        width: 80rem;
+        height: 100rem;
+    }
+
+    .ext_form {
+        width: 79.6rem;
+        height: 99.6rem;
+    }
+
+    form {
+        width: 75rem;
+        height: 95rem;
+        font-size: 2rem;
+    }
+
+    .tipo1 {
+        width: 75rem;
+        height: 5rem;
+    }
+
+    .tipo2 {
+        width: 75rem;
+        height: 40rem;
+    }
+
+    .tipo3 {
+        width: 15rem;
+    }
+
 }
