--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,7 @@
 @import "./views/postres_clasicos";
 @import "./views/envios";
 @import "./views/contacto";
+
+
+//media queries 
+@import "./base/media_queries";
