--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -17,9 +17,12 @@ $principal_weight_font: 1000;
 //mapas
 
 $font_sizes: (
+
+    xxs: 1.5rem,
     xs: 2rem,
     s: 2.5rem,
     m: 3rem,
     l: 3.5rem,
     xl: 6rem,
+    
 );
